[gd_scene load_steps=8 format=3 uid="uid://d0hre8gcgkoqi"]

[ext_resource type="Script" path="res://src/game/Inventory/inventory_slot.gd" id="1_hore7"]
[ext_resource type="AudioStream" uid="uid://cs5d4xpaepfno" path="res://placeholders/sfx/inventory_hover.mp3" id="2_di5uy"]
[ext_resource type="Texture2D" uid="uid://dw0bwmhej6jr5" path="res://assets/gfx/environment/inventory box.png" id="3_fno3n"]
[ext_resource type="AudioStream" uid="uid://bk1l0igfvwlwu" path="res://placeholders/sfx/inventory_drop.mp3" id="3_ry32t"]
[ext_resource type="Texture2D" uid="uid://4rfl01nwsqq3" path="res://assets/gfx/environment/inventory box empty.png" id="4_bgrul"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7j2tx"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("2_di5uy")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hthkf"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("3_ry32t")

[node name="InventorySlot" type="TextureRect"]
z_index = -1
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
pivot_offset = Vector2(32, 32)
script = ExtResource("1_hore7")
empty_slot_texture = ExtResource("4_bgrul")
occupied_slot_texture = ExtResource("3_fno3n")

[node name="ItemHoverSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_7j2tx")
max_polyphony = 5
bus = &"Sound"

[node name="ItemDropSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_hthkf")
max_polyphony = 5
bus = &"Sound"

[node name="Panel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -19.0
offset_right = 19.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bgrul")
